--- a/build.gradle
+++ b/build.gradle
@@ -72,7 +72,9 @@ dependencies {
     compile 'org.slf4j:slf4j-api:1.7.5'
     runtime 'org.slf4j:slf4j-log4j12:1.7.5'
 
-    compile 'org.thymeleaf:thymeleaf-spring3:2.1.3.RELEASE'
+    compile 'org.thymeleaf:thymeleaf:2.1.3.RELEASE'
+    compile 'org.thymeleaf:thymeleaf-spring4:2.1.3.RELEASE'
+    compile 'org.thymeleaf:thymeleaf-testing:2.1.3.RELEASE'
 
     testCompile "junit:junit:4.11"
     testCompile "org.mockito:mockito-core:1.9.5"
